# autolab-fasr

./: AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  Makefile  README  bruteforce.sh  bruteforce1.sh  bruteforce2.sh  bruteforce3.sh  build.sh  build_dependencies.sh  cmake_install.cmake  fasrRobot.kdevelop.filelist  fasrRobot.kdevelop.pcs  fasrrobot.kdevelop  fasrrobot.kdevses  index.html  install_manifest.txt  run.sh  run_experiment1.sh  run_experiment2.sh  run_experiment3.sh  run_experiment4.sh  run_experiment5.sh  run_experiment6.sh  run_experiment7.sh  run_experiment8.sh  setpath.sh  tasks.txt
doc/: Doxyfile  Makefile  README  sourcedocs.sh
fasrSource/: CMakeLists.txt  Makefile  cmake_install.cmake  fasrsource.cpp  fasrsource.h  main.cpp
matlab/: icra_calc_numrobots.m  icra_numrobots.m  icra_plot.m  icra_process_data.m  wait_prob.m  wait_prob_stat.m
src/: CMakeLists.txt  CMakeLists.txt~  Makefile  analyst.cpp  analyst.h  baserobot.cpp  baserobot.h  baserobotctrl.cpp  baserobotctrl.cpp~  baserobotctrl.h  baserobotctrl.h~  broadcast.cpp  broadcast.h  charger.cpp  charger.h  cmake_install.cmake  common.cpp  common.h  destination.cpp  destination.cpp~  destination.h  epsilonsamplerrobotctrl.cpp  epsilonsamplerrobotctrl.h  fixedratiopolicyrobotctrl.cpp  fixedratiopolicyrobotctrl.h  global.h  gridmap.h  individualswcostpolicyrobot.cpp  individualswcostpolicyrobot.h  logwriter.cpp  logwriter.h  looppolicyrobot.cpp  looppolicyrobot.h  looppolicyrobotctrl.cpp  looppolicyrobotctrl.cpp~  looppolicyrobotctrl.h  looppolicyrobotctrl.h~  main.cpp  main.cpp~  nd.h  (+40 more)
src/gui/: CMakeLists.txt  analystdialog.cpp  analystdialog.h  analysttaskwidget.cpp  analysttaskwidget.h  fasrgui.cpp  fasrgui.h  robotschedulerdialog.cpp  robotschedulerdialog.h  taskdatawidget.cpp  taskdatawidget.h
taskManager/: .#taskmanager.cpp.1.6  .#taskmanager.cpp.1.8  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  main.cpp  taskmanager.cpp  taskmanager.cpp~  taskmanager.h  taskmanager.h~
taskmanager/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  taskmanager.cpp  taskmanager.h
templates/: cpp  h
visualizer/: CMakeLists.txt  Makefile  baserobotwidget.cpp  baserobotwidget.h  cmake_install.cmake  cmdlineparser.cpp  cmdlineparser.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_baserobotwidget.cxx  moc_dataled.cxx  moc_dataline.cxx  moc_mainwindow.cxx  moc_visclient.cxx  taskwidget.cpp  taskwidget.h  unicodechar.h  visclient.cpp  visclient.h  visualizer
world/: fasr.world  fasr_common.inc  fasr_cost.world  fasr_fixed.world  fasr_interference.world  fasr_large.world  fasr_replan.world  fasr_replan1.world  fasr_replan2.world  fasr_wait.world  fasr_waitprob.world  fasr_waitprob1.world  fasr_waitprob2.world  map.inc  sick.inc
